umami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: umami
spec:
  selector:
    app.kubernetes.io/name: umami
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
